--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     border: blue solid 2px;
     float: left;
 }
+.block1-1{
+    background-color: red;
+    width: 50px;
+    height: 50px;
+    border: blue solid 2px;
+}
 .block2 {
     background-color: green;
     width: 50px;
@@ -36,7 +42,7 @@
 .nav2 {
     margin-left: auto;
     margin-right: auto;
-    width: 1000px;   
+    width: 190px;   
 }
 .bigblock {
     width: 100px;
